--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@crownframework/svelte-error-boundary": "^1.0.3",
+    "@spectrum-css/switch": "4.0.16",
     "svelte": "^3.49.0"
   },
   "devDependencies": {
