--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - master
       - main
+    tags:
+      - "v*.*.*"
+  workflow_dispatch:
 
 jobs:
   build:
@@ -13,8 +16,6 @@ jobs:
       contents: write
     steps:
       - uses: actions/checkout@v3
-        with:
-          path: ${{ github.workspace }}
       - uses: actions/setup-node@v1
         with:
           node-version: 18
@@ -22,8 +23,8 @@ jobs:
         run: |
           release_version=$(cat package.json | jq -r '.version')
           echo "RELEASE_VERSION=$release_version" >> $GITHUB_ENV
-          yarn
-          yarn build
+          npm ci
+          npm run build
       - name: Perform Github Release
         uses: softprops/action-gh-release@v1
         with:
@@ -31,4 +32,4 @@ jobs:
           tag_name: v${{ env.RELEASE_VERSION }}
           generate_release_notes: true
           files: |
-            ${{ github.workspace }}/bb-component-SuperFieldBoolean/dist/*.tar.gz
+            dist/*.tar.gz
