--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "bb-component-SuperFieldBoolean",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "A Boolean Input Field for Budibase",
+  "author": "Michael Poirazi",
   "packageManager": "bun@1.0.0",
   "license": "MIT",
   "svelte": "index.ts",
@@ -17,12 +18,13 @@
   "devDependencies": {
     "@budibase/backend-core": "^3.24.0",
     "@sveltejs/vite-plugin-svelte": "^6.2.4",
-    "postcss": "^8.5.6",
     "svelte": "^5.46.1",
     "tar": "^7.5.2",
     "terser": "^5.44.1",
     "typescript": "^5.9.3",
-    "vite": "^7.3.1"
+    "vite": "^7.3.1",
+    "vite-plugin-css-injected-by-js": "^3.5.2",
+    "vite-plugin-singlefile": "^2.3.0"
   },
   "peerDependencies": {
     "svelte": "^5.46.1"
